--- a/src/styles/error.scss
+++ b/src/styles/error.scss
@@ -15,7 +15,7 @@
 
   &__link {
     font-size: 24px;
-    color: yellow;
+    color: rgb(186, 162, 22);
 
     &:hover {
       text-decoration: underline;
